# skyrim_potion_cocktail_app

./: .gitignore  README.md  pyproject.toml
app/: main.py  services.py
app/data/: ingredients.json
app/routes/: characters.py
app/static/: index.html
docs/: skyrim-mod-repo-AGENTS.draft.md
tests/: test_api.py
