[project]
name = "skyrim-alchemy-app"
version = "0.1.0"
description = "Skyrim Alchemy Tool with FastAPI and SQLite persistence"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
